Okan, 1, LocalStorage işlemleri tamamlandı.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous"
     ></script>
-    <script src="javascript.js"></script>
+    <script src="app.js"></script>
 </div>
 </body>
 </html>
